Manually revert 2251583002

Manually revert all of https://codereview.chromium.org/2251583002/. NeedsRebaseline tags were removed by
rebaseline-o-matic - adding them back to reset test expectations to former state.
Replaces
https://codereview.chromium.org/2251393002/ which could not
auto-merge
BUG=638822
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel
TBR=ericrk@chromium.org,vmpstr@chromium.org

Review-Url: https://codereview.chromium.org/2251863005
Cr-Commit-Position: refs/heads/master@{#412762}

Former-commit-id: 524ac838e48fa8d291d6dfbb63ac6395d55eb533